notes wrapping fix

--- a/stage/stage.css
+++ b/stage/stage.css
@@ -57,6 +57,8 @@ body {
     text-align: right;
 
     color: rgb(255, 57, 35);
+
+    overflow-wrap: break-word;
   }
 
 /* ELEMENTS */
@@ -79,7 +81,7 @@ body {
   font-weight: bold;
 
   color: rgb(255, 255, 255);
-  background-color: rgb(29, 173, 0);
+  background-color: rgb(25, 145, 1);
   border-radius: 0.2em;
 }
 
