--- a/stage_dark/stage.css
+++ b/stage_dark/stage.css
@@ -57,6 +57,8 @@ body {
     text-align: right;
 
     color: salmon;
+
+    overflow-wrap: break-word;
   }
 
 /* ELEMENTS */
